# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header$

*portage-2.0.47-r10 (13 Mar 2003): Fixes -- Winding up 2.0 series.

  13 Mar 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Less strict
  check of permissions when fixing permissions for userpriv -- only requires
  02070 and group portage instead of 02770 for check.

  13 Mar 2003; Nicholas Jones <carpaski@gentoo.org> g-cpan.pl: Fix to the
  call to portageq.
  
  13 Mar 2003; Nicholas Jones <carpaski@gentoo.org> etc-update: Fix for
  deleted files in a CONFIG_PROTECT situation.

  13 Mar 2003; Nicholas Jones <carpaski@gentoo.org> emerge: fix for keepwork
  and keeptemp ** MUST ENSURE THAT CLEAN CLEANS BEFORE A FULL MERGE. 

  12 Mar 2003; Nicholas Jones <carpaski@gentoo.org> emerge: Added more
  conditions on rsync -- Proper error detection. Rsync failures will not
  cause a cache regeneration. Portage no longer considers masked portages
  candidates for 'An update to portage'.

*portage-2.0.47-r9 (10 Mar 2003): Fixes -- cvs-src, ebuild.sh, repoman

  10 Mar 2003; Nicholas Jones <carpaski@gentoo.org> make.conf*: Adjusted
  the LOGDIR message and change the default location to /var/log/portage.

  10 Mar 2003; Nicholas Jones <carpaski@gentoo.org> repoman: One more fix
  for the PORTDIR setting -- '/usr/portage' was matching '/usr/portage.cvs'.
  
  10 Mar 2003; Nicholas Jones <carpaski@gentoo.org> etc-update: Added the
  capability to automerge all files in the list -- with out without prompts.
  
  10 Mar 2003; Nicholas Jones <carpaski@gentoo.org> emerge: Added messages
  on failure to create a depgraph -- Helps with bad DEPEND detection. Made
  'emerge sync' stop if it fails, and not update cache.
  
  10 Mar 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: added an
  external extra_functions.sh file with extra functions for portage --