@@ -2,6 +2,10 @@
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Header$
 
+  21 Mar 2003; Nicholas Jones <carpaski@gentoo.org> xpak.py: Updates to make
+	the xpak code self-sustaining. Added basic documentation to the functions
+	and a description of the format in the comments at the top of the module.
+
 *portage-2.0.47-r10 (13 Mar 2003): Fixes -- Winding up 2.0 series.
 
   13 Mar 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Less strict
